--- a/index.html
+++ b/index.html
@@ -1,37 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <style>
-  /* Equal-height rows for sink grid */
-  .sink-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 12px;
-    grid-auto-rows: 64px;          /* ← make all rows same height */
-  }
-  .sink-grid label {
-    display: flex;
-    align-items: center;           /* center vertically within the equal-height cell */
-    gap: 8px;
-    height: 100%;                  /* fill grid row height */
-  }
-  .sink-grid label span {
-    display: block;
-    line-height: 1.25;
-  }
-
-  /* Responsive: 2 cols on medium, 1 col on small */
-  @media (max-width: 1000px) {
-    .sink-grid { grid-template-columns: repeat(2, 1fr); grid-auto-rows: 72px; }
-  }
-  @media (max-width: 640px) {
-    .sink-grid { grid-template-columns: 1fr; grid-auto-rows: 56px; }
-  }
-</style>
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prefab Countertop Calculator + OCR + Prefab & Plywood Suggestions</title>
+
+  <!-- Page-local styles: scoped so nothing else changes -->
+  <style>
+    /* ===== Buttons row in one line (wraps on small screens) ===== */
+    .controls {
+      display: flex;
+      gap: 10px;
+      align-items: stretch;
+      margin: 12px 0 6px;
+      flex-wrap: wrap;              /* wrap if viewport is narrow */
+    }
+    .controls > button {
+      flex: 1 1 0;                  /* make buttons share the row */
+      min-width: 220px;             /* prevents overly skinny buttons */
+    }
+
+    /* ===== Sink box: modern card that matches app look ===== */
+    #sink-options {
+      margin: 10px 0 12px;
+      padding: 10px 14px;           /* tighter padding */
+      border-radius: 12px;
+      border: 1px solid #dbe3ff;    /* light blue border to echo buttons */
+      background: #f5f7ff;          /* subtle blue tint */
+      box-shadow: 0 1px 2px rgba(0,0,0,.04);
+    }
+    #sink-options .section-title {
+      font-weight: 600;
+      margin: 2px 0 8px;
+      color: #1f2a5a;
+      letter-spacing: .2px;
+    }
+
+    /* Grid layout with equal-height rows, compact spacing */
+    .sink-grid {
+      display: grid;
+      grid-template-columns: repeat(3, minmax(240px, 1fr));
+      gap: 10px;                    /* tighter horizontal/vertical gap */
+      grid-auto-rows: 56px;         /* smaller vertical “patting” */
+    }
+
+    /* Keep each option as a single flex item; small font inside only */
+    .sink-grid > label {
+      display: inline-flex !important;
+      align-items: flex-start;
+      gap: 8px;
+      height: 100%;
+      line-height: 1.25;
+      font-size: 0.95rem;           /* slightly smaller text only here */
+      color: #222;
+    }
+    .sink-grid > label input[type="checkbox"] {
+      margin-top: 2px;
+      flex: 0 0 auto;
+      transform: scale(0.95);       /* visually a bit tighter */
+    }
+    .sink-grid > label span {
+      display: block;
+      white-space: normal;
+    }
+
+    /* Responsive: 2 cols on medium, 1 col on small; keep spacing comfy */
+    @media (max-width: 1000px) {
+      .sink-grid { grid-template-columns: repeat(2, minmax(240px, 1fr)); grid-auto-rows: 60px; }
+    }
+    @media (max-width: 640px) {
+      .controls > button { min-width: 100%; }   /* stack buttons on phones */
+      .sink-grid { grid-template-columns: 1fr; grid-auto-rows: 52px; }
+    }
+  </style>
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -47,55 +89,56 @@
     </div>
   </section>
 
+  <!-- Buttons now share one line -->
   <section class="controls">
     <button id="calcBtn" onclick="calculate()">Calculate Totals</button>
     <button id="suggestBtn" onclick="suggestPieces()">Suggest Prefab Pieces</button>
     <button id="plyBtn" onclick="suggestPlywood()">Suggest Plywood Sheets</button>
   </section>
-<!-- Sink Options (aligned + equal-height rows) -->
-<div id="sink-options" style="margin:14px 0; padding:14px 16px; border:1px solid #e5e7eb; border-radius:10px;">
-  <div style="font-weight:600; margin-bottom:8px;">Optional Sink Selections</div>
 
-  <div class="sink-grid">
-    <label>
-      <input type="checkbox" class="sink-addon" data-price="180">
-      <span>Standard Kitchen Sink Undermount</span>
-    </label>
+  <!-- Sink Options (aligned + equal-height rows; grand total only) -->
+  <div id="sink-options">
+    <div class="section-title">Optional Sink Selections</div>
 
-    <label>
-      <input type="checkbox" class="sink-addon" data-price="455">
-      <span>HandMade Kitchen Sink Undermount</span>
-    </label>
+    <div class="sink-grid">
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="180">
+        <span>Standard Kitchen Sink Undermount</span>
+      </label>
 
-    <label>
-      <input type="checkbox" class="sink-addon" data-price="560">
-      <span>WorkStation Kitchen Sink Undermount</span>
-    </label>
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="455">
+        <span>HandMade Kitchen Sink Undermount</span>
+      </label>
 
-    <label>
-      <input type="checkbox" class="sink-addon" data-price="200">
-      <span>Apron Kitchen Sink Undermount</span>
-    </label>
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="560">
+        <span>WorkStation Kitchen Sink Undermount</span>
+      </label>
 
-    <label>
-      <input type="checkbox" class="sink-addon" data-price="80">
-      <span>Standard Bathroom Sink Undermount</span>
-    </label>
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="200">
+        <span>Apron Kitchen Sink Undermount</span>
+      </label>
 
-    <label>
-      <input type="checkbox" class="sink-addon" data-price="40">
-      <span>Topmount Bathroom Sink</span>
-    </label>
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="80">
+        <span>Standard Bathroom Sink Undermount</span>
+      </label>
 
-    <label>
-      <input type="checkbox" class="sink-addon" data-price="30">
-      <span>Vessel Bathroom Sink</span>
-    </label>
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="40">
+        <span>Topmount Bathroom Sink</span>
+      </label>
+
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="30">
+        <span>Vessel Bathroom Sink</span>
+      </label>
+    </div>
   </div>
-</div>
 
-
-<!-- TABLE STARTS HERE -->
+  <!-- TABLE STARTS HERE -->
   <table id="inputTable">
     <thead>
       <tr>
