--- a/index.html
+++ b/index.html
@@ -6,72 +6,69 @@
   <title>Prefab Countertop Calculator + OCR + Prefab & Plywood Suggestions</title>
 
   <!-- Page-local styles: scoped so nothing else changes -->
-  <style>
-    /* ===== Buttons row in one line (wraps on small screens) ===== */
-    .controls {
-      display: flex;
-      gap: 10px;
-      align-items: stretch;
-      margin: 12px 0 6px;
-      flex-wrap: wrap;              /* wrap if viewport is narrow */
-    }
-    .controls > button {
-      flex: 1 1 0;                  /* make buttons share the row */
-      min-width: 220px;             /* prevents overly skinny buttons */
-    }
+ <style>
+  /* ===== Controls row (unchanged behavior) ===== */
+  .controls{
+    display:flex; gap:10px; align-items:stretch; margin:12px 0 6px; flex-wrap:wrap;
+  }
+  .controls>button{ flex:1 1 0; min-width:220px; }
 
-    /* ===== Sink box: modern card that matches app look ===== */
-    #sink-options {
-      margin: 10px 0 12px;
-      padding: 10px 14px;           /* tighter padding */
-      border-radius: 12px;
-      border: 1px solid #dbe3ff;    /* light blue border to echo buttons */
-      background: #f5f7ff;          /* subtle blue tint */
-      box-shadow: 0 1px 2px rgba(0,0,0,.04);
-    }
-    #sink-options .section-title {
-      font-weight: 600;
-      margin: 2px 0 8px;
-      color: #1f2a5a;
-      letter-spacing: .2px;
-    }
+  /* ===== Sink box: keep within page and centered ===== */
+  #sink-options{
+    margin: 10px auto 12px;
+    padding: 12px 18px;                 /* a bit more left/right padding */
+    border-radius: 12px;
+    border: 1px solid #dbe3ff;
+    background: #f5f7ff;
+    box-shadow: 0 1px 2px rgba(0,0,0,.04);
+    max-width: calc(100% - 16px);       /* prevents touching page edges */
+    box-sizing: border-box;             /* include padding in width */
+  }
+  #sink-options .section-title{
+    font-weight:600; margin:2px 0 8px; color:#1f2a5a; letter-spacing:.2px;
+  }
 
-    /* Grid layout with equal-height rows, compact spacing */
-    .sink-grid {
-      display: grid;
-      grid-template-columns: repeat(3, minmax(240px, 1fr));
-      gap: 10px;                    /* tighter horizontal/vertical gap */
-      grid-auto-rows: 56px;         /* smaller vertical “patting” */
-    }
+  /* ===== Grid: more forgiving column width, no overflow ===== */
+  .sink-grid{
+    display:grid;
+    grid-template-columns: repeat(3, minmax(300px, 1fr)); /* wider minimum so text doesn't wrap too aggressively */
+    column-gap: 20px;                                    /* a little more room between columns */
+    row-gap: 8px;                                        /* tighter vertical spacing */
+    grid-auto-rows: 58px;                                /* uniform row height */
+    width: 100%;
+  }
 
-    /* Keep each option as a single flex item; small font inside only */
-    .sink-grid > label {
-      display: inline-flex !important;
-      align-items: flex-start;
-      gap: 8px;
-      height: 100%;
-      line-height: 1.25;
-      font-size: 0.95rem;           /* slightly smaller text only here */
-      color: #222;
-    }
-    .sink-grid > label input[type="checkbox"] {
-      margin-top: 2px;
-      flex: 0 0 auto;
-      transform: scale(0.95);       /* visually a bit tighter */
-    }
-    .sink-grid > label span {
-      display: block;
-      white-space: normal;
-    }
+  /* ===== Labels: keep checkbox + text together, closer spacing ===== */
+  .sink-grid>label{
+    display:inline-flex !important;      /* prevents splitting across grid cells */
+    align-items:center;                  /* centers vertically */
+    gap:6px;                             /* text closer to checkbox */
+    height:100%;
+    line-height:1.25;
+    font-size:0.95rem;
+    color:#222;
+    white-space:normal;                  /* allow wrapping */
+  }
+  .sink-grid>label input[type="checkbox"]{
+    margin:0;                            /* sit flush with text */
+    flex:0 0 auto;
+    transform:scale(0.95);
+  }
+  .sink-grid>label span{ display:block; }
 
-    /* Responsive: 2 cols on medium, 1 col on small; keep spacing comfy */
-    @media (max-width: 1000px) {
-      .sink-grid { grid-template-columns: repeat(2, minmax(240px, 1fr)); grid-auto-rows: 60px; }
-    }
-    @media (max-width: 640px) {
-      .controls > button { min-width: 100%; }   /* stack buttons on phones */
-      .sink-grid { grid-template-columns: 1fr; grid-auto-rows: 52px; }
-    }
+  /* ===== Responsive ===== */
+  @media (max-width: 1200px){
+    .sink-grid{ grid-template-columns: repeat(3, minmax(260px,1fr)); }
+  }
+  @media (max-width: 1000px){
+    .sink-grid{ grid-template-columns: repeat(2, minmax(260px,1fr)); grid-auto-rows:60px; }
+  }
+  @media (max-width: 640px){
+    .controls>button{ min-width:100%; }  /* stack buttons on phones */
+    .sink-grid{ grid-template-columns: 1fr; grid-auto-rows:54px; }
+  }
+</style>
+
   </style>
 
   <link rel="stylesheet" href="style.css" />
