--- a/index.html
+++ b/index.html
@@ -5,37 +5,197 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prefab Countertop Calculator + OCR + Prefab & Plywood Suggestions</title>
 
-  <!-- Layout-only styles (safe: no function changes) -->
-  <style>
-    /* ===== General page rhythm ===== */
-    body { margin: 0; }
-    h1 { margin: 18px 0 10px; }
-    .uploader, .controls, #sink-options, table, h2 { margin-left: 26px; margin-right: 26px; }
+  <!-- Page-local styles: scoped so nothing else changes -->
+<style>
+  /* ===== Controls row (unchanged behavior) ===== */
+  .controls{
+    display:flex; gap:10px; align-items:stretch; margin:12px 0 6px; flex-wrap:wrap;
+  }
+  .controls>button{ flex:1 1 0; min-width:220px; }
 
-    /* ===== Uploader spacing ===== */
-    .uploader { margin-top: 6px; margin-bottom: 8px; }
-    .uploader h2 { margin: 10px 0 8px; }
+  /* ===== Sink box: keep within page and centered ===== */
+  #sink-options{
+    margin: 10px auto 12px;
+    padding: 12px 18px;                 /* a bit more left/right padding */
+    border-radius: 12px;
+    border: 1px solid #dbe3ff;
+    background: #f5f7ff;
+    box-shadow: 0 1px 2px rgba(0,0,0,.04);
+    max-width: calc(100% - 16px);       /* prevents touching page edges */
+    box-sizing: border-box;             /* include padding in width */
+  }
+  #sink-options .section-title{
+    font-weight:600; margin:2px 0 8px; color:#1f2a5a; letter-spacing:.2px;
+  }
 
-    /* ===== Primary buttons row (3 on one line; wrap on small screens) ===== */
-    .controls{
-      display:flex;
-      gap:18px;                     /* corrected padding between buttons */
-      align-items:center;
-      justify-content:space-between;
-      margin: 14px 26px 10px;       /* top/right/bottom/left */
-      padding: 0;                   /* no extra padding in row container */
-      flex-wrap:wrap;
-    }
-    .controls > button{
-      flex: 1 1 0;
-      min-width: 260px;             /* keeps the three-pill layout */
-      padding: 14px 18px;           /* corrected button padding */
-      border-radius: 12px;          /* pill feel like screenshot */
-      font-weight: 700;
-    }
+  /* ===== Grid: more forgiving column width, no overflow ===== */
+  .sink-grid{
+    display:grid;
+    grid-template-columns: repeat(3, minmax(300px, 1fr)); /* wider minimum so text doesn't wrap too aggressively */
+    column-gap: 20px;                                    /* a little more room between columns */
+    row-gap: 8px;                                        /* tighter vertical spacing */
+    grid-auto-rows: 58px;                                /* uniform row height */
+    width: 100%;
+  }
 
-    /* ===== Sink box styled as a modern card, stays inside page ===== */
-    #sink-options{
-      margin: 14px 26px 16px;
-      padding: 12px 18px;           /* corrected inner padding */
-      border-radius: 12px;
+  /* ===== Labels: keep checkbox + text together, closer spacing ===== */
+  .sink-grid>label{
+    display:inline-flex !important;      /* prevents splitting across grid cells */
+    align-items:center;                  /* centers vertically */
+    gap:6px;                             /* text closer to checkbox */
+    height:100%;
+    line-height:1.25;
+    font-size:0.95rem;
+    color:#222;
+    white-space:normal;                  /* allow wrapping */
+  }
+  .sink-grid>label input[type="checkbox"]{
+    margin:0;                            /* sit flush with text */
+    flex:0 0 auto;
+    transform:scale(0.95);
+  }
+  .sink-grid>label span{ display:block; }
+
+  /* ===== Responsive ===== */
+  @media (max-width: 1200px){
+    .sink-grid{ grid-template-columns: repeat(3, minmax(260px,1fr)); }
+  }
+  @media (max-width: 1000px){
+    .sink-grid{ grid-template-columns: repeat(2, minmax(260px,1fr)); grid-auto-rows:60px; }
+  }
+  @media (max-width: 640px){
+    .controls>button{ min-width:100%; }  /* stack buttons on phones */
+    .sink-grid{ grid-template-columns: 1fr; grid-auto-rows:54px; }
+  }
+</style>
+
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1>Prefab Countertop Calculator</h1>
+
+  <section class="uploader">
+    <h2>Sketch Upload (Draw → Quote)</h2>
+    <input type="file" id="imageInput" accept="image/*" />
+    <button id="runOcrBtn">Run OCR & Auto‑Fill</button>
+    <div id="ocrStatus"></div>
+    <div class="preview">
+      <img id="previewImg" alt="Sketch preview" />
+    </div>
+  </section>
+
+  <!-- Buttons now share one line -->
+  <section class="controls">
+    <button id="calcBtn" onclick="calculate()">Calculate Totals</button>
+    <button id="suggestBtn" onclick="suggestPieces()">Suggest Prefab Pieces</button>
+    <button id="plyBtn" onclick="suggestPlywood()">Suggest Plywood Sheets</button>
+  </section>
+
+  <!-- Sink Options (aligned + equal-height rows; grand total only) -->
+  <div id="sink-options">
+    <div class="section-title">Optional Sink Selections</div>
+
+    <div class="sink-grid">
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="180">
+        <span>Standard Kitchen Sink Undermount</span>
+      </label>
+
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="455">
+        <span>HandMade Kitchen Sink Undermount</span>
+      </label>
+
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="560">
+        <span>WorkStation Kitchen Sink Undermount</span>
+      </label>
+
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="200">
+        <span>Apron Kitchen Sink Undermount</span>
+      </label>
+
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="80">
+        <span>Standard Bathroom Sink Undermount</span>
+      </label>
+
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="40">
+        <span>Topmount Bathroom Sink</span>
+      </label>
+
+      <label>
+        <input type="checkbox" class="sink-addon" data-price="30">
+        <span>Vessel Bathroom Sink</span>
+      </label>
+    </div>
+  </div>
+
+  <!-- TABLE STARTS HERE -->
+  <table id="inputTable">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Group</th>
+        <th>Type</th>
+        <th>Length (in)</th>
+        <th>Width (in)</th>
+        <th>Material</th>
+        <th>Sink</th>
+        <th>Refab LF</th>
+        <th>Sqft</th>
+        <th>Labor ($)</th>
+        <th>Extras ($)</th>
+        <th>Total ($)</th>
+      </tr>
+    </thead>
+    <tbody id="tableBody">
+      <!-- JS inserts rows here -->
+    </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="8" style="text-align: right;"><strong>Totals:</strong></td>
+        <td id="totalSqft"></td>
+        <td id="totalLabor"></td>
+        <td id="totalExtras"></td>
+        <td id="totalCost"></td>
+      </tr>
+    </tfoot>
+  </table>
+
+  <h2>Suggested Prefab Pieces (by Material/Type, leftovers reused)</h2>
+  <table id="suggestTable">
+    <thead>
+      <tr>
+        <th>Row</th>
+        <th>Group</th>
+        <th>Type</th>
+        <th>Cut (L×W in)</th>
+        <th>Source</th>
+        <th>Prefab Used (in)</th>
+        <th>Leftovers Added</th>
+      </tr>
+    </thead>
+    <tbody id="suggestBody"></tbody>
+  </table>
+
+  <h2>Plywood Sheets (48×96 @ $70, minimized waste)</h2>
+  <div id="plySummary"></div>
+  <table id="plyTable">
+    <thead>
+      <tr>
+        <th>Sheet #</th>
+        <th>Cuts on Sheet</th>
+        <th>Leftover Areas</th>
+      </tr>
+    </thead>
+    <tbody id="plyBody"></tbody>
+  </table>
+
+  <!-- Tesseract.js for OCR -->
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
+  <script src="script.js"></script>
+</body>
+</html>
