--- a/index.html
+++ b/index.html
@@ -6,94 +6,86 @@
   <title>Prefab Countertop Calculator + OCR + Prefab & Plywood Suggestions</title>
 
   <!-- Layout-only styles (safe: no function changes) -->
-  <style>
-    /* ===== General page rhythm ===== */
-    body { margin: 0; }
-    h1 { margin: 18px 0 10px; }
-    .uploader, .controls, #sink-options, table, h2 { margin-left: 26px; margin-right: 26px; }
+ <style>
+/* ========= 1) Three action buttons on one line (match mock) ========= */
+section.controls {
+  display: grid !important;
+  grid-template-columns: repeat(3, minmax(260px, 1fr)) !important;
+  gap: 18px !important;
+  align-items: center !important;
+  justify-content: center !important;
+  margin: 14px 26px 10px !important;
+  padding: 0 !important;
+}
+section.controls > button {
+  width: 100% !important;
+  border-radius: 12px !important;
+  padding: 14px 18px !important;
+  font-weight: 700 !important;
+  display: inline-block !important;
+  /* if your style.css sets them full-width bars, keep color but give pill feel */
+  box-shadow: 0 1px 2px rgba(0,0,0,.04) !important;
+}
 
-    /* ===== Uploader spacing ===== */
-    .uploader { margin-top: 6px; margin-bottom: 8px; }
-    .uploader h2 { margin: 10px 0 8px; }
+/* ========= 2) Sink card contained & aligned like screenshot ========= */
+#sink-options {
+  margin: 14px 26px 16px !important;
+  padding: 12px 18px !important;           /* “patting” corrected */
+  border-radius: 12px !important;
+  border: 1px solid #dbe3ff !important;
+  background: #f5f7ff !important;
+  box-shadow: 0 1px 2px rgba(0,0,0,.04) !important;
+  box-sizing: border-box !important;
+  max-width: calc(100% - 52px) !important; /* never spill outside page */
+}
+#sink-options .section-title {
+  font-weight: 700 !important;
+  margin: 4px 0 12px !important;
+  color: #1f2a5a !important;
+  letter-spacing: .2px !important;
+}
 
-    /* ===== Primary buttons row (3 on one line; wrap on small screens) ===== */
-    .controls{
-      display:flex;
-      gap:18px;                     /* corrected padding between buttons */
-      align-items:center;
-      justify-content:space-between;
-      margin: 14px 26px 10px;       /* top/right/bottom/left */
-      padding: 0;                   /* no extra padding in row container */
-      flex-wrap:wrap;
-    }
-    .controls > button{
-      flex: 1 1 0;
-      min-width: 260px;             /* keeps the three-pill layout */
-      padding: 14px 18px;           /* corrected button padding */
-      border-radius: 12px;          /* pill feel like screenshot */
-      font-weight: 700;
-    }
+/* ========= 3) Sink grid: no overlap, text next to box, tidy spacing ========= */
+#sink-options .sink-grid {
+  display: grid !important;
+  grid-template-columns: repeat(3, minmax(300px, 1fr)) !important;
+  column-gap: 28px !important;   /* spacing between columns */
+  row-gap: 10px !important;      /* vertical spacing between items */
+  grid-auto-rows: 48px !important;  /* equal row height */
+  width: 100% !important;
+}
+#sink-options .sink-grid > label {
+  display: inline-flex !important; /* keep checkbox + text together */
+  align-items: center !important;
+  gap: 8px !important;             /* text closer to checkbox */
+  height: 100% !important;
+  line-height: 1.25 !important;
+  font-size: 1rem !important;      /* keep readable */
+  color: #111827 !important;
+  white-space: normal !important;  /* allow wrapping under the text */
+}
+#sink-options .sink-grid > label input[type="checkbox"] {
+  margin: 0 !important;
+  flex: 0 0 auto !important;
+  transform: scale(0.95) !important;
+}
 
-    /* ===== Sink box styled as a modern card, stays inside page ===== */
-    #sink-options{
-      margin: 14px 26px 16px;
-      padding: 12px 18px;           /* corrected inner padding */
-      border-radius: 12px;
-      border: 1px solid #dbe3ff;
-      background: #f5f7ff;
-      box-shadow: 0 1px 2px rgba(0,0,0,.04);
-      box-sizing: border-box;
-    }
-    #sink-options .section-title{
-      font-weight: 700;
-      margin: 4px 0 12px;           /* header spacing */
-      color: #1f2a5a;
-      letter-spacing: .2px;
-    }
-
-    /* ===== Sink options grid (3 columns, even rows, tight spacing) ===== */
-    .sink-grid{
-      display:grid;
-      grid-template-columns: repeat(3, minmax(300px, 1fr));
-      column-gap: 28px;             /* consistent with screenshot spacing */
-      row-gap: 10px;                /* vertical spacing between options */
-      grid-auto-rows: 48px;         /* equal height rows = clean lines */
-      width: 100%;
-    }
-    /* Keep checkbox + text together; bring text closer to box */
-    .sink-grid > label{
-      display:inline-flex !important;
-      align-items:center;
-      gap: 8px;                     /* text closer to checkbox */
-      height: 100%;
-      line-height: 1.25;
-      font-size: 1rem;              /* keep readable as requested */
-      color:#111827;
-      white-space: normal;
-    }
-    .sink-grid > label input[type="checkbox"]{
-      margin: 0;                    /* no weird gaps */
-      flex: 0 0 auto;
-      transform: scale(0.95);
-    }
-
-    /* ===== Tables section spacing ===== */
-    h2 { margin: 18px 26px 8px; }
-
-    /* ===== Responsive tweaks ===== */
-    @media (max-width: 1180px){
-      .controls > button { min-width: 240px; }
-      .sink-grid{ grid-template-columns: repeat(3, minmax(260px,1fr)); }
-    }
-    @media (max-width: 980px){
-      .controls > button { min-width: 280px; } /* becomes 2 per row */
-      .sink-grid{ grid-template-columns: repeat(2, minmax(280px,1fr)); grid-auto-rows: 52px; }
-    }
-    @media (max-width: 640px){
-      .controls > button { min-width: 100%; }  /* stack buttons */
-      .sink-grid{ grid-template-columns: 1fr; grid-auto-rows: 50px; }
-    }
-  </style>
+/* ========= 4) Responsive behavior ========= */
+@media (max-width: 1180px){
+  section.controls { grid-template-columns: repeat(3, minmax(240px,1fr)) !important; }
+  #sink-options .sink-grid { grid-template-columns: repeat(3, minmax(260px,1fr)) !important; }
+}
+@media (max-width: 980px){
+  section.controls { grid-template-columns: repeat(2, minmax(280px,1fr)) !important; }
+  #sink-options .sink-grid { grid-template-columns: repeat(2, minmax(280px,1fr)) !important; grid-auto-rows: 52px !important; }
+}
+@media (max-width: 640px){
+  section.controls { grid-template-columns: 1fr !important; }
+  section.controls > button { min-width: 100% !important; }
+  #sink-options { margin-left: 16px !important; margin-right: 16px !important; max-width: calc(100% - 32px) !important; }
+  #sink-options .sink-grid { grid-template-columns: 1fr !important; grid-auto-rows: 50px !important; }
+}
+</style>
 
   <link rel="stylesheet" href="style.css" />
 </head>
