--- a/index.html
+++ b/index.html
@@ -5,89 +5,97 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prefab Countertop Calculator + OCR + Prefab & Plywood Suggestions</title>
 
-  <!-- Layout-only styles (safe: no function changes) -->
- <style>
-/* ========= 1) Three action buttons on one line (match mock) ========= */
-section.controls {
-  display: grid !important;
-  grid-template-columns: repeat(3, minmax(260px, 1fr)) !important;
-  gap: 18px !important;
-  align-items: center !important;
-  justify-content: center !important;
-  margin: 14px 26px 10px !important;
-  padding: 0 !important;
-}
-section.controls > button {
-  width: 100% !important;
-  border-radius: 12px !important;
-  padding: 14px 18px !important;
-  font-weight: 700 !important;
-  display: inline-block !important;
-  /* if your style.css sets them full-width bars, keep color but give pill feel */
-  box-shadow: 0 1px 2px rgba(0,0,0,.04) !important;
-}
-
-/* ========= 2) Sink card contained & aligned like screenshot ========= */
-#sink-options {
-  margin: 14px 26px 16px !important;
-  padding: 12px 18px !important;           /* “patting” corrected */
-  border-radius: 12px !important;
-  border: 1px solid #dbe3ff !important;
-  background: #f5f7ff !important;
-  box-shadow: 0 1px 2px rgba(0,0,0,.04) !important;
-  box-sizing: border-box !important;
-  max-width: calc(100% - 52px) !important; /* never spill outside page */
-}
-#sink-options .section-title {
-  font-weight: 700 !important;
-  margin: 4px 0 12px !important;
-  color: #1f2a5a !important;
-  letter-spacing: .2px !important;
-}
-
-/* ========= 3) Sink grid: no overlap, text next to box, tidy spacing ========= */
-#sink-options .sink-grid {
-  display: grid !important;
-  grid-template-columns: repeat(3, minmax(300px, 1fr)) !important;
-  column-gap: 28px !important;   /* spacing between columns */
-  row-gap: 10px !important;      /* vertical spacing between items */
-  grid-auto-rows: 48px !important;  /* equal row height */
-  width: 100% !important;
-}
-#sink-options .sink-grid > label {
-  display: inline-flex !important; /* keep checkbox + text together */
-  align-items: center !important;
-  gap: 8px !important;             /* text closer to checkbox */
-  height: 100% !important;
-  line-height: 1.25 !important;
-  font-size: 1rem !important;      /* keep readable */
-  color: #111827 !important;
-  white-space: normal !important;  /* allow wrapping under the text */
-}
-#sink-options .sink-grid > label input[type="checkbox"] {
-  margin: 0 !important;
-  flex: 0 0 auto !important;
-  transform: scale(0.95) !important;
-}
-
-/* ========= 4) Responsive behavior ========= */
-@media (max-width: 1180px){
-  section.controls { grid-template-columns: repeat(3, minmax(240px,1fr)) !important; }
-  #sink-options .sink-grid { grid-template-columns: repeat(3, minmax(260px,1fr)) !important; }
-}
-@media (max-width: 980px){
-  section.controls { grid-template-columns: repeat(2, minmax(280px,1fr)) !important; }
-  #sink-options .sink-grid { grid-template-columns: repeat(2, minmax(280px,1fr)) !important; grid-auto-rows: 52px !important; }
-}
-@media (max-width: 640px){
-  section.controls { grid-template-columns: 1fr !important; }
-  section.controls > button { min-width: 100% !important; }
-  #sink-options { margin-left: 16px !important; margin-right: 16px !important; max-width: calc(100% - 32px) !important; }
-  #sink-options .sink-grid { grid-template-columns: 1fr !important; grid-auto-rows: 50px !important; }
-}
-</style>
-
+  <!-- Your base styles -->
   <link rel="stylesheet" href="style.css" />
+
+  <!-- ✅ Single override block (layout-only; wins over style.css) -->
+  <style>
+    /* ========= 1) Three action buttons on one line ========= */
+    section.controls {
+      display: grid !important;
+      grid-template-columns: repeat(3, minmax(260px, 1fr)) !important;
+      gap: 18px !important;
+      align-items: center !important;
+      justify-content: center !important;
+      margin: 14px 26px 10px !important;
+      padding: 0 !important;
+    }
+    section.controls > button {
+      width: 100% !important;
+      border-radius: 12px !important;
+      padding: 14px 18px !important;
+      font-weight: 700 !important;
+      display: inline-block !important;
+      box-shadow: 0 1px 2px rgba(0,0,0,.04) !important;
+    }
+
+    /* ========= 2) Sink card ========= */
+    #sink-options {
+      margin: 14px 26px 16px !important;
+      padding: 12px 18px !important;               /* corrected inner padding */
+      border-radius: 12px !important;
+      border: 1px solid #dbe3ff !important;
+      background: #f5f7ff !important;
+      box-shadow: 0 1px 2px rgba(0,0,0,.04) !important;
+      box-sizing: border-box !important;
+      max-width: calc(100% - 52px) !important;
+      overflow: hidden !important;                  /* keep content inside */
+    }
+    #sink-options .section-title {
+      font-weight: 700 !important;
+      margin: 4px 0 12px !important;
+      color: #1f2a5a !important;
+      letter-spacing: .2px !important;
+    }
+
+    /* ========= 3) Sink grid (single-line names, closer to checkbox) ========= */
+    #sink-options .sink-grid {
+      display: grid !important;
+      grid-template-columns: repeat(3, minmax(0, 1fr)) !important; /* allows truncation */
+      column-gap: 18px !important;
+      row-gap: 8px !important;
+      grid-auto-rows: 48px !important;
+      width: 100% !important;
+    }
+    #sink-options .sink-grid > label {
+      display: inline-flex !important;
+      align-items: center !important;
+      gap: 6px !important;                           /* name closer to checkbox */
+      min-width: 0 !important;                       /* let text shrink */
+      height: 100% !important;
+      line-height: 1.25 !important;
+      white-space: nowrap !important;                /* single line */
+    }
+    #sink-options .sink-grid > label input[type="checkbox"] {
+      margin: 0 !important;
+      flex: 0 0 auto !important;
+      transform: scale(0.95) !important;
+    }
+    #sink-options .sink-grid > label span {
+      overflow: hidden !important;
+      text-overflow: ellipsis !important;            /* truncate */
+      white-space: nowrap !important;
+      display: block !important;
+      min-width: 0 !important;
+      color: #111827 !important;
+      font-size: 1rem !important;                    /* readable */
+    }
+
+    /* ========= 4) Responsive ========= */
+    @media (max-width: 1180px){
+      section.controls { grid-template-columns: repeat(3, minmax(240px,1fr)) !important; }
+    }
+    @media (max-width: 980px){
+      section.controls { grid-template-columns: repeat(2, minmax(280px,1fr)) !important; }
+      #sink-options .sink-grid { grid-template-columns: repeat(2, minmax(0,1fr)) !important; grid-auto-rows: 50px !important; }
+    }
+    @media (max-width: 640px){
+      section.controls { grid-template-columns: 1fr !important; }
+      section.controls > button { min-width: 100% !important; }
+      #sink-options { margin-left: 16px !important; margin-right: 16px !important; max-width: calc(100% - 32px) !important; }
+      #sink-options .sink-grid { grid-template-columns: 1fr !important; grid-auto-rows: 48px !important; }
+    }
+  </style>
 </head>
 <body>
   <h1>Prefab Countertop Calculator</h1>
@@ -141,7 +149,9 @@ section.controls > button {
         <th>Total ($)</th>
       </tr>
     </thead>
-    <tbody id="tableBody"></tbody>
+    <tbody id="tableBody">
+      <!-- JS inserts rows here -->
+    </tbody>
     <tfoot>
       <tr>
         <td colspan="8" style="text-align:right;"><strong>Totals:</strong></td>
@@ -184,6 +194,7 @@ section.controls > button {
 
   <!-- Tesseract.js for OCR -->
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
+  <!-- Your app logic (unchanged functions/calculations) -->
   <script src="script.js"></script>
 </body>
 </html>
