--- a/index.html
+++ b/index.html
@@ -53,6 +53,54 @@
   @media (max-width: 640px){
     #sink-options .sink-grid{ grid-template-columns: 1fr !important; }
   }
+    <style>
+  /* Ensure the sink grid renders */
+  #sink-options .sink-grid { display: grid !important; }
+
+  /* 🔧 Force checkboxes to actually show */
+  #sink-options .sink-grid > label input[type="checkbox"]{
+    appearance: auto !important;
+    -webkit-appearance: checkbox !important;
+    display: inline-block !important;
+    position: static !important;
+    opacity: 1 !important;
+    visibility: visible !important;
+    margin: 0 !important;
+    transform: none !important;      /* remove any scale that might hide them */
+    width: auto !important;
+    height: auto !important;
+  }
+
+  /* Keep name on one line, closer to the box, and inside the card */
+  #sink-options .sink-grid > label{
+    display: inline-flex !important;
+    align-items: center !important;
+    gap: 6px !important;
+    min-width: 0 !important;
+    white-space: nowrap !important;
+    height: 48px !important;         /* matches your row height */
+    line-height: 1.2 !important;
+  }
+  #sink-options .sink-grid > label span{
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+    white-space: nowrap !important;
+    display: block !important;
+    min-width: 0 !important;
+  }
+
+  /* Card must contain its contents (no spill) */
+  #sink-options{ overflow: hidden !important; box-sizing: border-box !important; }
+
+  /* Responsive keeps behavior */
+  @media (max-width: 980px){
+    #sink-options .sink-grid{ grid-template-columns: repeat(2, minmax(0,1fr)) !important; }
+  }
+  @media (max-width: 640px){
+    #sink-options .sink-grid{ grid-template-columns: 1fr !important; }
+  }
+</style>
+
 </style>
 
 
