--- a/index.html
+++ b/index.html
@@ -5,108 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Prefab Countertop Calculator + OCR + Prefab & Plywood Suggestions</title>
 
-  <!-- Your base styles -->
+  <!-- Base stylesheet -->
   <link rel="stylesheet" href="style.css" />
+
+  <!-- ✅ Overrides and sink qty styles -->
   <style>
-  /* Ensure the sink grid renders */
-  #sink-options .sink-grid { display: grid !important; }
-
-  /* 🔧 Force checkboxes to actually show */
-  #sink-options .sink-grid > label input[type="checkbox"]{
-    appearance: auto !important;
-    -webkit-appearance: checkbox !important;
-    display: inline-block !important;
-    position: static !important;
-    opacity: 1 !important;
-    visibility: visible !important;
-    margin: 0 !important;
-    transform: none !important;      /* remove any scale that might hide them */
-    width: auto !important;
-    height: auto !important;
-  }
-
-  /* Keep name on one line, closer to the box, and inside the card */
-  #sink-options .sink-grid > label{
-    display: inline-flex !important;
-    align-items: center !important;
-    gap: 6px !important;
-    min-width: 0 !important;
-    white-space: nowrap !important;
-    height: 48px !important;         /* matches your row height */
-    line-height: 1.2 !important;
-  }
-  #sink-options .sink-grid > label span{
-    overflow: hidden !important;
-    text-overflow: ellipsis !important;
-    white-space: nowrap !important;
-    display: block !important;
-    min-width: 0 !important;
-  }
-
-  /* Card must contain its contents (no spill) */
-  #sink-options{ overflow: hidden !important; box-sizing: border-box !important; }
-
-  /* Responsive keeps behavior */
-  @media (max-width: 980px){
-    #sink-options .sink-grid{ grid-template-columns: repeat(2, minmax(0,1fr)) !important; }
-  }
-  @media (max-width: 640px){
-    #sink-options .sink-grid{ grid-template-columns: 1fr !important; }
-  }
-    <style>
-  /* Ensure the sink grid renders */
-  #sink-options .sink-grid { display: grid !important; }
-
-  /* 🔧 Force checkboxes to actually show */
-  #sink-options .sink-grid > label input[type="checkbox"]{
-    appearance: auto !important;
-    -webkit-appearance: checkbox !important;
-    display: inline-block !important;
-    position: static !important;
-    opacity: 1 !important;
-    visibility: visible !important;
-    margin: 0 !important;
-    transform: none !important;      /* remove any scale that might hide them */
-    width: auto !important;
-    height: auto !important;
-  }
-
-  /* Keep name on one line, closer to the box, and inside the card */
-  #sink-options .sink-grid > label{
-    display: inline-flex !important;
-    align-items: center !important;
-    gap: 6px !important;
-    min-width: 0 !important;
-    white-space: nowrap !important;
-    height: 48px !important;         /* matches your row height */
-    line-height: 1.2 !important;
-  }
-  #sink-options .sink-grid > label span{
-    overflow: hidden !important;
-    text-overflow: ellipsis !important;
-    white-space: nowrap !important;
-    display: block !important;
-    min-width: 0 !important;
-  }
-
-  /* Card must contain its contents (no spill) */
-  #sink-options{ overflow: hidden !important; box-sizing: border-box !important; }
-
-  /* Responsive keeps behavior */
-  @media (max-width: 980px){
-    #sink-options .sink-grid{ grid-template-columns: repeat(2, minmax(0,1fr)) !important; }
-  }
-  @media (max-width: 640px){
-    #sink-options .sink-grid{ grid-template-columns: 1fr !important; }
-  }
-</style>
-
-</style>
-
-
-  <!-- ✅ Single override block (layout-only; wins over style.css) -->
-  <style>
-    /* ========= 1) Three action buttons on one line ========= */
+    /* ===== Buttons row ===== */
     section.controls {
       display: grid !important;
       grid-template-columns: repeat(3, minmax(260px, 1fr)) !important;
@@ -125,17 +29,17 @@
       box-shadow: 0 1px 2px rgba(0,0,0,.04) !important;
     }
 
-    /* ========= 2) Sink card ========= */
+    /* ===== Sink card ===== */
     #sink-options {
       margin: 14px 26px 16px !important;
-      padding: 12px 18px !important;               /* corrected inner padding */
+      padding: 12px 18px !important;
       border-radius: 12px !important;
       border: 1px solid #dbe3ff !important;
       background: #f5f7ff !important;
       box-shadow: 0 1px 2px rgba(0,0,0,.04) !important;
       box-sizing: border-box !important;
       max-width: calc(100% - 52px) !important;
-      overflow: hidden !important;                  /* keep content inside */
+      overflow: hidden !important;
     }
     #sink-options .section-title {
       font-weight: 700 !important;
@@ -144,10 +48,10 @@
       letter-spacing: .2px !important;
     }
 
-    /* ========= 3) Sink grid (single-line names, closer to checkbox) ========= */
+    /* ===== Sink grid ===== */
     #sink-options .sink-grid {
       display: grid !important;
-      grid-template-columns: repeat(3, minmax(0, 1fr)) !important; /* allows truncation */
+      grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
       column-gap: 18px !important;
       row-gap: 8px !important;
       grid-auto-rows: 48px !important;
@@ -156,31 +60,44 @@
     #sink-options .sink-grid > label {
       display: inline-flex !important;
       align-items: center !important;
-      gap: 6px !important;                           /* name closer to checkbox */
-      min-width: 0 !important;                       /* let text shrink */
+      gap: 6px !important;
+      min-width: 0 !important;
       height: 100% !important;
       line-height: 1.25 !important;
-      white-space: nowrap !important;                /* single line */
+      white-space: nowrap !important;
     }
     #sink-options .sink-grid > label input[type="checkbox"] {
+      appearance: auto !important;
+      -webkit-appearance: checkbox !important;
+      display: inline-block !important;
+      opacity: 1 !important;
       margin: 0 !important;
       flex: 0 0 auto !important;
-      transform: scale(0.95) !important;
     }
     #sink-options .sink-grid > label span {
       overflow: hidden !important;
-      text-overflow: ellipsis !important;            /* truncate */
+      text-overflow: ellipsis !important;
       white-space: nowrap !important;
       display: block !important;
       min-width: 0 !important;
       color: #111827 !important;
-      font-size: 1rem !important;                    /* readable */
+      font-size: 1rem !important;
     }
 
-    /* ========= 4) Responsive ========= */
-    @media (max-width: 1180px){
-      section.controls { grid-template-columns: repeat(3, minmax(240px,1fr)) !important; }
+    /* ===== Qty input (hidden until selected) ===== */
+    #sink-options .sink-grid > label .sink-qty {
+      width: 58px;
+      height: 30px;
+      padding: 4px 6px;
+      margin-left: 6px;
+      border: 1px solid #cbd5e1;
+      border-radius: 8px;
+      font-size: 0.95rem;
+      background: #fff;
+      box-sizing: border-box;
     }
+
+    /* ===== Responsive ===== */
     @media (max-width: 980px){
       section.controls { grid-template-columns: repeat(2, minmax(280px,1fr)) !important; }
       #sink-options .sink-grid { grid-template-columns: repeat(2, minmax(0,1fr)) !important; grid-auto-rows: 50px !important; }
@@ -199,31 +116,31 @@
   <section class="uploader">
     <h2>Sketch Upload (Draw → Quote)</h2>
     <input type="file" id="imageInput" accept="image/*" />
-    <button id="runOcrBtn">Run OCR & Auto‑Fill</button>
+    <button id="runOcrBtn">Run OCR & Auto-Fill</button>
     <div id="ocrStatus"></div>
     <div class="preview">
       <img id="previewImg" alt="Sketch preview" />
     </div>
   </section>
 
-  <!-- Three primary actions in one row -->
+  <!-- Three primary actions -->
   <section class="controls">
     <button id="calcBtn" onclick="calculate()">Calculate Totals</button>
     <button id="suggestBtn" onclick="suggestPieces()">Suggest Prefab Pieces</button>
     <button id="plyBtn" onclick="suggestPlywood()">Suggest Plywood Sheets</button>
   </section>
 
-  <!-- Sink Options (grand total only; no function changes) -->
+  <!-- Sink Options with qty -->
   <div id="sink-options">
     <div class="section-title">Optional Sink Selections</div>
     <div class="sink-grid">
-      <label><input type="checkbox" class="sink-addon" data-price="180"><span>Standard Kitchen Sink Undermount</span></label>
-      <label><input type="checkbox" class="sink-addon" data-price="455"><span>HandMade Kitchen Sink Undermount</span></label>
-      <label><input type="checkbox" class="sink-addon" data-price="560"><span>WorkStation Kitchen Sink Undermount</span></label>
-      <label><input type="checkbox" class="sink-addon" data-price="200"><span>Apron Kitchen Sink Undermount</span></label>
-      <label><input type="checkbox" class="sink-addon" data-price="80"><span>Standard Bathroom Sink Undermount</span></label>
-      <label><input type="checkbox" class="sink-addon" data-price="40"><span>Topmount Bathroom Sink</span></label>
-      <label><input type="checkbox" class="sink-addon" data-price="30"><span>Vessel Bathroom Sink</span></label>
+      <label><input type="checkbox" class="sink-addon" data-price="180"><span>Standard Kitchen Sink Undermount</span><input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden></label>
+      <label><input type="checkbox" class="sink-addon" data-price="455"><span>HandMade Kitchen Sink Undermount</span><input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden></label>
+      <label><input type="checkbox" class="sink-addon" data-price="560"><span>WorkStation Kitchen Sink Undermount</span><input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden></label>
+      <label><input type="checkbox" class="sink-addon" data-price="200"><span>Apron Kitchen Sink Undermount</span><input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden></label>
+      <label><input type="checkbox" class="sink-addon" data-price="80"><span>Standard Bathroom Sink Undermount</span><input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden></label>
+      <label><input type="checkbox" class="sink-addon" data-price="40"><span>Topmount Bathroom Sink</span><input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden></label>
+      <label><input type="checkbox" class="sink-addon" data-price="30"><span>Vessel Bathroom Sink</span><input type="number" class="sink-qty" min="1" step="1" value="1" disabled hidden></label>
     </div>
   </div>
 
@@ -245,9 +162,7 @@
         <th>Total ($)</th>
       </tr>
     </thead>
-    <tbody id="tableBody">
-      <!-- JS inserts rows here -->
-    </tbody>
+    <tbody id="tableBody"></tbody>
     <tfoot>
       <tr>
         <td colspan="8" style="text-align:right;"><strong>Totals:</strong></td>
@@ -275,22 +190,4 @@
     <tbody id="suggestBody"></tbody>
   </table>
 
-  <h2>Plywood Sheets (48×96 @ $70, minimized waste)</h2>
-  <div id="plySummary"></div>
-  <table id="plyTable">
-    <thead>
-      <tr>
-        <th>Sheet #</th>
-        <th>Cuts on Sheet</th>
-        <th>Leftover Areas</th>
-      </tr>
-    </thead>
-    <tbody id="plyBody"></tbody>
-  </table>
-
-  <!-- Tesseract.js for OCR -->
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
-  <!-- Your app logic (unchanged functions/calculations) -->
-  <script src="script.js"></script>
-</body>
-</html>
+  <h2>Plywood Sheets (48×96 @ $70, m
